# data_fetcher

./: .env.example  .gitignore  README.md  gen_breeze_token.py  pyproject.toml  requirements.txt
data_fetcher/: cli.py  config.py  csv_writer.py  db.py  db_sync.py  models.py  nse_utils.py  runner.py
data_fetcher/digestors/: base.py  breeze_digestor.py  kite_digestor.py
data_fetcher/instruments/: bhavcopy.py
data_fetcher/sources/: base.py  breeze_source.py  kite_source.py
tests/: test_bhavcopy.py  test_csv_writer.py  test_digestors.py  test_nse_utils.py
